--- a/src/libs/core/CMakeLists.txt
+++ b/src/libs/core/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(core core.cpp)
 target_link_libraries(core PUBLIC sfml-system sfml-network sfml-graphics sfml-window)
+target_link_libraries(core PUBLIC ImGui-SFML::ImGui-SFML)
